--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,5 @@
 name: Sync en.json with ru.json
+
 on:
   push:
     paths:
@@ -7,25 +8,26 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out the code
+      - name: Check out code
         uses: actions/checkout@v2
-      
-      - name: Install Python
+
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      
+
       - name: Install dependencies
         run: pip install requests
-      
+
       - name: Fetch en.json and ru.json
         run: |
-          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          curl -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
                -H "Accept: application/vnd.github.v3.raw" \
                -o en.json \
                -L https://api.github.com/repos/Tuc-tac/test/contents/lang/en.json
-          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          curl -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
                -H "Accept: application/vnd.github.v3.raw" \
                -o ru.json \
                -L https://api.github.com/repos/Tuc-tac/test/contents/lang/ru.json
@@ -41,5 +43,7 @@ jobs:
           if [[ -n $(git status --porcelain) ]]; then
             git add ru.json
             git commit -m "Sync ru.json with en.json"
-            git push
+            git push --set-upstream origin ${{ github.ref }}
           fi
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
